--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,9 +52,6 @@ span{
 .area {
   padding: 80px 10px;
 }
-.areain {
-  padding: 50px 0;
-}
 .areanopadiing {
   padding: 80px 0px;
 }
@@ -66,6 +63,9 @@ span{
 }
 .area2 {
   padding: 80px 10px;
+}
+.areain{
+  padding: 40px 0;
 }
 .navbar-brand {
   /* padding-left: 10px; */
@@ -506,7 +506,7 @@ span{
   width: 100%;
 }
 
-#owl-carousel-1 .item {
+.owl-carousel-1 .item {
   align-items: center;
   background-color: transparent;
   color: white;
@@ -521,7 +521,7 @@ span{
   width: 100%;
 }
 
-#owl-carousel-3 .owl-item {
+.owl-carousel-3 .owl-item {
   align-items: center;
   /* background-color: tomato; */
   color: white;
@@ -532,23 +532,23 @@ span{
   position: relative;
 }
 
-#owl-carousel-3 .owl-item.active.center {
+.owl-carousel-3 .owl-item.active.center {
   filter: grayscale(0) !important;
 }
-#owl-carousel-3 .owl-item:hover {
+.owl-carousel-3 .owl-item:hover {
   filter: grayscale(0);
   cursor: pointer;
 }
 
-#owl-carousel-3 .item img {
+.owl-carousel-3 .item img {
   max-width: 140px;
 }
 
-#owl-carousel-3 .owl-dots {
+.owl-carousel-3 .owl-dots {
   text-align: center;
   padding-top: 15px;
 }
-#owl-carousel-3 .owl-dots button.owl-dot {
+.owl-carousel-3 .owl-dots button.owl-dot {
   width: 10px;
   height: 10px;
   border-radius: 50%;
@@ -558,18 +558,18 @@ span{
   /* border: 1px solid black!important; */
   margin: 0 3px;
 }
-#owl-carousel-3 .owl-dots button.owl-dot.active {
+.owl-carousel-3 .owl-dots button.owl-dot.active {
   background-color: #c4c4c4;
 }
-#owl-carousel-3 .owl-dots button.owl-dot:focus {
+.owl-carousel-3 .owl-dots button.owl-dot:focus {
   outline: none;
 }
 
-#owl-carousel-4 .owl-dots {
+.owl-carousel-4 .owl-dots {
   text-align: center;
   padding-top: 15px;
 }
-#owl-carousel-4 .owl-dots button.owl-dot {
+.owl-carousel-4 .owl-dots button.owl-dot {
   width: 10px;
   height: 10px;
   border-radius: 50%;
@@ -579,14 +579,14 @@ span{
   /* border: 1px solid black!important; */
   margin: 0 3px;
 }
-#owl-carousel-4 .owl-dots button.owl-dot.active {
+.owl-carousel-4 .owl-dots button.owl-dot.active {
   background-color: #c4c4c4;
 }
-#owl-carousel-4 .owl-dots button.owl-dot:focus {
+.owl-carousel-4 .owl-dots button.owl-dot:focus {
   outline: none;
 }
 
-#owl-carousel-5 .owl-dots {
+.owl-carousel-5 .owl-dots {
   text-align: center;
   position: absolute;
   transform: rotate(90deg);
@@ -596,7 +596,7 @@ span{
 }
 
 @media (max-width: 858px) {
-  #owl-carousel-5 .owl-dots {
+  .owl-carousel-5 .owl-dots {
     text-align: center;
     position: absolute;
     transform: rotate(90deg);
@@ -613,7 +613,7 @@ span{
 }
 
 @media (max-width: 425px) {
-  #owl-carousel-5 .owl-dots {
+  .owl-carousel-5 .owl-dots {
     text-align: center;
     position: static;
     padding-top: 15px;
@@ -629,7 +629,7 @@ span{
     width: 98% !important;
   }
 }
-#owl-carousel-5 .owl-dots button.owl-dot {
+.owl-carousel-5 .owl-dots button.owl-dot {
   width: 10px;
   height: 10px;
   border-radius: 50%;
@@ -639,10 +639,10 @@ span{
   /* border: 1px solid black!important; */
   margin: 0 3px;
 }
-#owl-carousel-5 .owl-dots button.owl-dot.active {
+.owl-carousel-5 .owl-dots button.owl-dot.active {
   background-color: #c4c4c4;
 }
-#owl-carousel-5 .owl-dots button.owl-dot:focus {
+.owl-carousel-5 .owl-dots button.owl-dot:focus {
   outline: none;
 }
 
@@ -806,17 +806,17 @@ span{
   width: 100%;
   height: auto;
 }
-#owl-carousel-1 .item {
+.owl-carousel-1 .item {
   margin: 15px;
 }
 
-#owl-carousel-1 .owl-dots {
+.owl-carousel-1 .owl-dots {
   text-align: center;
   padding-top: 15px;
   position: relative;
   top: -85px;
 }
-#owl-carousel-1 .owl-dots button.owl-dot {
+.owl-carousel-1 .owl-dots button.owl-dot {
   width: 10px;
   height: 10px;
   border-radius: 50%;
@@ -826,38 +826,38 @@ span{
   /* border: 1px solid black!important; */
   margin: 0 3px;
 }
-#owl-carousel-1 .owl-dots button.owl-dot.active {
+.owl-carousel-1 .owl-dots button.owl-dot.active {
   background-color: #c4c4c4;
 }
-#owl-carousel-1 .owl-dots button.owl-dot:focus {
+.owl-carousel-1 .owl-dots button.owl-dot:focus {
   outline: none;
 }
 
 .owl-carousel {
   position: relative;
 }
-#owl-carousel-1 .owl-prev {
+.owl-carousel-1 .owl-prev {
   position: absolute;
   transform: translateY(-50%);
   top: 45%;
   left: 9%;
 }
 
-#owl-carousel-1 .owl-next {
+.owl-carousel-1 .owl-next {
   position: absolute;
   transform: translateY(-50%);
   top: 45%;
   right: 9%;
 }
 
-#owl-carousel-2 .owl-prev {
+.owl-carousel-2 .owl-prev {
   position: absolute;
   transform: translateY(-50%);
   top: 50%;
   left: 9.5%;
 }
 
-#owl-carousel-2 .owl-next {
+.owl-carousel-2 .owl-next {
   position: absolute;
   transform: translateY(-50%);
   top: 50%;
@@ -902,10 +902,10 @@ span{
     top: 50%;
     right: 0%;
   }
-  #owl-carousel-2 .owl-prev {
+  .owl-carousel-2 .owl-prev {
     left: 0%;
   }
-  #owl-carousel-2 .owl-next {
+  .owl-carousel-2 .owl-next {
     right: 0%;
   }
 }
@@ -1605,8 +1605,16 @@ span{
 .stitle {
   font-weight: 600;
   color: var(--dblue);
+  font-size: 30px;
+  text-transform: capitalize !important;
+  margin: 20px 0!important;
+}
+.toptitle {
+  font-weight: 600;
+  color: var(--dblue);
   font-size: 35px;
   text-transform: capitalize !important;
+  margin: 40px 0!important;
 }
 .stitle2 {
   font-weight: 600;
@@ -1679,7 +1687,7 @@ span{
 .KM:hover {
   color: var(--lblue);
 }
-
+/* 
 .mt10 {
   margin-top: 10px;
 }
@@ -1708,7 +1716,7 @@ span{
 
 .mb40 {
   margin-bottom: 50px;
-}
+} */
 .inlink {
   color: var(--lblue);
 }
@@ -1802,6 +1810,12 @@ span{
   margin: 20px 0 20px 40px;
   font-weight: 600;
 }
+@media(max-width:425px){
+  .noul2 li{
+  margin: 20px 0 20px 30px;
+    
+  }
+}
 .noul2 li:last-child{
   margin-bottom: 0px;
 }
@@ -1809,9 +1823,7 @@ span{
   color: var(--gtxt);
   font-weight: 400;
 }
-.topHead{
-  margin: 40px 0;
-}
+
 .inHead{
   margin: 20px 0!important;
 }
@@ -2644,6 +2656,9 @@ span{
   .selectbox{
     margin: 20px 0;
   }
+  .form input {
+    width: 35%;
+  }
 }
 
 @media (max-width: 426px) {
@@ -2695,7 +2710,7 @@ span{
     font-size: 14px !important;
   }
 .areain{
-  padding: 40px 0;
+  padding: 30px 0;
 }
   .backbtn a {
     color: var(--lblue);
